tests/success/types-2.moc
Int main() {
    Int i = 0+7;
    Int j = 42/6;
    i+42;
    42+j;
    i+j;
    i*42;
    42*j;
    i*j;
    42 == 6*7;
    'a' == 'b';
    5 < 8;
    new(Char) != null;

    return j;
}

